# enzymetest

./: CMakeLists.txt  EnzymeWrapper.h  StaticSolve.h  main.cpp
cmake/: FindLibshell.cmake
